fix container overflow

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ img {
 .container {
     max-width: 1100px;
     margin: auto;
-    overflow: auto;
+    overflow: hidden;
     padding: 0 2rem;
 }
 
